--- a/replicasets/replicaset.yaml
+++ b/replicasets/replicaset.yaml
@@ -8,7 +8,7 @@ spec:
   selector:
     matchLabels:
       app: myapp
-  replicase: 3
+  replicas: 3
   template:
     metadata:
       name: nginx-2
